# PdfFrame

./: .g.conf  .gitignore  CHANGELOG.md  README.md  clean.sh  com.ogekuri.pdfframe.desktop  com.ogekuri.pdfframe.metainfo.xml  pdfframe.sh  pyproject.toml  requirements.txt  tests.sh  venv.sh
docs/: REFERENCES.md  REQUIREMENTS.md  WORKFLOW.md
src/pdfframe/: __main__.py  application.py  autotrim.py  config.py  jsonconfig.py  mainwindow.py  mainwindow.ui  mainwindowui_qt5.py  mainwindowui_qt6.py  pdfframecmd.py  pdfframeper.py  qt.py  vieweritem.py  viewerselections.py
tests/: test_desktop_metadata_branding.py  test_jsonconfig.py  test_mainwindow_conversion_errors.py  test_mainwindow_openfile_page_format.py  test_mainwindow_preserve_fields.py  test_mainwindow_presets.py  test_mainwindow_progress_updates.py  test_mainwindow_removed_basic_controls.py  test_mainwindow_single_selection.py  test_mainwindow_trim_nomenclature.py  test_mainwindow_trim_pages_range.py  test_mainwindow_trim_settings.py  test_mainwindow_whichpages.py  test_packaging_pyproject.py  test_pdfframecmd.py  test_vieweritem_logging.py  test_viewerselections_startup.py
